--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,48 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate4</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>cz.jirutka.rsql</groupId>
+			<artifactId>rsql-parser</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>cz.jirutka.rsql</groupId>-->
+<!--			<artifactId>rsql-parser</artifactId>-->
+<!--			<version>1.0.1</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>io.github.perplexhub</groupId>
+			<artifactId>rsql-querydsl-spring-boot-starter</artifactId>
+			<version>5.0.1</version>
+		</dependency>
+		<!--rsql-->
+		<dependency>
+			<groupId>cz.jirutka.rsql</groupId>
+			<artifactId>rsql-parser</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle-jaxrs</artifactId>
+			<version>2.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.tennaito</groupId>
+			<artifactId>rsql-jpa</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<!--Model Maper-->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
