studentsbysubjectid and subjectbystudentid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
+#spring.security.oauth2.client.clientId=679943059154-rpngnhi17ofap8cc8edk04gdbmvdeng0.apps.googleusercontent.com
+#spring.security.oauth2.client.clientSecret=6LiSj2T1J6iu7qD_go-oG3Db
+
+#spring.security.oauth2.client.registration.google.client-id=679943059154-rpngnhi17ofap8cc8edk04gdbmvdeng0.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=6LiSj2T1J6iu7qD_go-oG3Db
