--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--Sagger-->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -74,16 +75,6 @@
 			<artifactId>jackson-datatype-hibernate4</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-		<dependency>
-			<groupId>cz.jirutka.rsql</groupId>
-			<artifactId>rsql-parser</artifactId>
-			<version>2.1.0</version>
-		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>cz.jirutka.rsql</groupId>-->
-<!--			<artifactId>rsql-parser</artifactId>-->
-<!--			<version>1.0.1</version>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>io.github.perplexhub</groupId>
 			<artifactId>rsql-querydsl-spring-boot-starter</artifactId>
@@ -111,6 +102,16 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.5</version>
 		</dependency>
+		<!--Security-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-autoconfigure</artifactId>-->
+<!--			<version>2.2.5.RELEASE</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
