--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,15 @@ spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.main.allow-bean-definition-overriding=true
 
-#spring.security.oauth2.client.clientId=679943059154-rpngnhi17ofap8cc8edk04gdbmvdeng0.apps.googleusercontent.com
-#spring.security.oauth2.client.clientSecret=6LiSj2T1J6iu7qD_go-oG3Db
-
-#spring.security.oauth2.client.registration.google.client-id=679943059154-rpngnhi17ofap8cc8edk04gdbmvdeng0.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=6LiSj2T1J6iu7qD_go-oG3Db
+security.oauth2.client.clientId= 679943059154-rpngnhi17ofap8cc8edk04gdbmvdeng0.apps.googleusercontent.com
+security.oauth2.client.clientSecret= 6LiSj2T1J6iu7qD_go-oG3Db
+security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.scope = profile email
+security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo = false
