oauth2 mainc ar mushaobs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,11 @@ security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oa
 security.oauth2.client.tokenName = oauth_token
 security.oauth2.client.authenticationScheme = query
 security.oauth2.client.clientAuthenticationScheme = form
-security.oauth2.client.scope = profile email
+security.oauth2.client.scope = userinfo.email
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
+
+
+#security.oauth2.client.preEstablishedRedirectUri=http://localhost:8080/callback
+security.oauth2.client.useCurrentUri=false
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/callback/google
